--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "normalize.css": "~3.0.3",
     "handlebars": "~3.0.3",
     "backbone": "~1.2.1",
-    "foundation": "~5.5.2"
+    "foundation": "~5.5.2",
+    "font-awesome": "~4.3.0"
   },
   "devDependencies": {
     "mocha": "~2.2.5",
