--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "handlebars": "~3.0.3",
     "backbone": "~1.2.1",
     "foundation": "~5.5.2",
-    "font-awesome": "~4.3.0"
+    "font-awesome": "~4.3.0",
+    "Cookies": "~1.2.1"
   },
   "devDependencies": {
     "mocha": "~2.2.5",
